<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:background="@drawable/bg_01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopScreen">

    <TextView
        android:id="@+id/txtUID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgCoin"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/img"
        app:layout_constraintTop_toBottomOf="@id/txtUID"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/farmcoin" />
    <TextView
        android:id="@+id/txtCoin"
        android:text="@string/number"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/imgCoin"
        app:layout_constraintStart_toEndOf="@+id/imgCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/lvSanpham"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgCoin" />

</androidx.constraintlayout.widget.ConstraintLayout>