<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/happyfarm2"
    tools:context=".HappyFarmScreen">

    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="463dp"
        android:layout_height="195dp"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/bg_03" />

    <ImageView
        android:id="@+id/imgLogout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.050"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_logout" />
    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imgLogout"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/txtLvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/lvl"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imgLogout"
        app:layout_constraintTop_toBottomOf="@id/txtUserName" />

    <ImageView
        android:id="@+id/imgMoney"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/img"
        app:layout_constraintTop_toBottomOf="@id/imgLogout"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/farmcoin" />
    <TextView
        android:id="@+id/txtMoney"
        android:text="@string/number"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogout"
        app:layout_constraintStart_toEndOf="@+id/imgMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imgiconLua"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/img"
        app:layout_constraintTop_toBottomOf="@id/imgMoney"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/ic_lua" />
    <TextView
        android:id="@+id/txtSolgLua"
        android:text="@string/number"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@id/imgiconLua"
        app:layout_constraintStart_toEndOf="@+id/imgiconLua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imgiconCachua"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/img"
        app:layout_constraintTop_toBottomOf="@id/imgiconLua"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/ic_cachua" />
    <TextView
        android:id="@+id/txtSolgCachua"
        android:text="@string/number"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@id/imgiconCachua"
        app:layout_constraintStart_toEndOf="@+id/imgiconCachua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imgiconCarot"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/img"
        app:layout_constraintTop_toBottomOf="@id/imgiconCachua"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/ic_carot" />
    <TextView
        android:id="@+id/txtSolgCarot"
        android:text="@string/number"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@id/imgiconCarot"
        app:layout_constraintStart_toEndOf="@+id/imgiconCarot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imgTimeSkip"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/timeskip" />

    <TextView
        android:id="@+id/txt01"
        android:text="@string/nextday"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgTimeSkip" />
    <TextView
        android:id="@+id/txtStamina"
        android:text="@string/stamina_value"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt01" />
    <TextView
        android:id="@+id/txtStaminaValue"
        android:text="@string/stamina_number"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtStamina" />

    <ImageView
        android:id="@+id/imglua"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgcachua"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        tools:srcCompat="@drawable/ruonglua" />

    <ImageView
        android:id="@+id/imgcachua"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgcarot"
        app:layout_constraintStart_toEndOf="@id/imglua"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        tools:srcCompat="@drawable/ruongcachua" />

    <ImageView
        android:id="@+id/imgcarot"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgcachua"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427"
        tools:srcCompat="@drawable/ruongcarot" />

    <ImageView
        android:id="@+id/imgDat1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/img"
        app:layout_constraintTop_toBottomOf="@id/imglua"
        app:layout_constraintEnd_toStartOf="@id/imgDat2"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/dat_unlocked" />
    <ImageView
        android:id="@+id/imgDat2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/img"
        app:layout_constraintTop_toTopOf="@id/imgDat1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgDat1"
        tools:srcCompat="@drawable/dat_locked" />
    <ImageView
        android:id="@+id/imgDat3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/img"
        app:layout_constraintTop_toBottomOf="@id/imgDat1"
        app:layout_constraintEnd_toStartOf="@id/imgDat2"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/lua03" />
    <ImageView
        android:id="@+id/imgDat4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/img"
        app:layout_constraintTop_toTopOf="@id/imgDat3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgDat3"
        tools:srcCompat="@drawable/dat_ok" />

    <ImageView
        android:id="@+id/imgReact"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/gieohat" />
    <ImageView
        android:id="@+id/imgBonphan"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgReact"
        app:layout_constraintHorizontal_bias="0.948"
        tools:srcCompat="@drawable/bonphan" />
    <ImageView
        android:id="@+id/imgTuoinc"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgReact"
        tools:srcCompat="@drawable/tuoinc" />

    <ImageView
        android:id="@+id/imgShop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.050"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/icon_shop" />

    <ImageView
        android:id="@+id/imgOrder"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/order" />

</androidx.constraintlayout.widget.ConstraintLayout>